--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,7 +2,7 @@
     display: inline-grid;
 
     grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
 
     grid-template-areas: '. footerLinks .';
 }
