--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -15,3 +15,12 @@
     margin: 10px 0;
     padding: 0;
 }
+
+@media (max-width: 768px) {
+    .formGroup {
+        flex-direction: column;
+    }
+    .formGroup input {
+        margin-top: 2px;
+    }
+}
